// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be able to render as a class component 1`] = `
<section
  class="rmd-typography rmd-typography--body-1 custom"
  data-testid="text"
>
  Hello, world!
</section>
`;

exports[`Text should be able to render as a functional component 1`] = `
<section
  class="rmd-typography rmd-typography--body-1 custom"
  data-testid="text"
>
  Hello, world!
</section>
`;

exports[`Text should be able to render as a string component prop 1`] = `
<section
  class="rmd-typography rmd-typography--body-1"
  data-testid="text"
>
  Hello, world!
</section>
`;

exports[`Text should be able to use a children render function 1`] = `
<div>
  <span
    class="span rmd-typography rmd-typography--body-1"
  >
    Content
  </span>
</div>
`;
